--- a/net.resheim.eclipse.timekeeper.ui/plugin.xml
+++ b/net.resheim.eclipse.timekeeper.ui/plugin.xml
@@ -34,5 +34,12 @@
             file="contexts.xml">
       </contexts>
    </extension>
+   <extension
+         point="org.eclipse.mylyn.tasks.core.taskActivationListeners">
+      <listener
+            class="net.resheim.eclipse.timekeeper.ui.TaskActivationListener"
+            id="net.resheim.eclipse.timekeeper.taskActivationListener">
+      </listener>
+   </extension>
 
 </plugin>
