Fix #17: In the workweek view, indicate whether or not a task has been started, show start time
Task-Url: http://github.com/turesheim/eclipse-timekeeper/issues/issue/17

--- a/net.resheim.eclipse.timekeeper.ui/plugin.xml
+++ b/net.resheim.eclipse.timekeeper.ui/plugin.xml
@@ -37,7 +37,7 @@
    <extension
          point="org.eclipse.mylyn.tasks.core.taskActivationListeners">
       <listener
-            class="net.resheim.eclipse.timekeeper.ui.TaskActivationListener"
+            class="net.resheim.eclipse.timekeeper.internal.TaskActivationListener"
             id="net.resheim.eclipse.timekeeper.taskActivationListener">
       </listener>
    </extension>
