--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ sudo: false
 script: "mvn clean verify -f net.resheim.eclipse.timekeeper-parent/pom.xml"
 jdk:
   - oraclejdk8
+cache:
+  directories:
+  - $HOME/.m2
