--- a/net.resheim.eclipse.timekeeper-parent/pom.xml
+++ b/net.resheim.eclipse.timekeeper-parent/pom.xml
@@ -39,42 +39,7 @@
 	<properties>
 		<tycho.version>0.21.0</tycho.version>
 		<tycho-extras-version>0.21.0</tycho-extras-version>
-		<orbit-repository-url>http://download.eclipse.org/tools/orbit/downloads/drops/R20120526062928/repository/</orbit-repository-url>
-		<eclipse-site>http://download.eclipse.org/releases/luna/</eclipse-site>
-		<swtbot-site>http://download.eclipse.org/technology/swtbot/releases/2.2.1/</swtbot-site>
-		<!-- Sonar + JaCoCo -->
-		<sonar.language>java</sonar.language>
-		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-		<sonar.junit.reportsPath>${project.basedir}/target/surefire-reports/</sonar.junit.reportsPath>
 	</properties>
-
-	<profiles>
-		<!-- Connect to the locally running MySQL/MariaDB database for storing results  -->
-		<profile>
-			<id>sonar</id>
-			<properties>
-				<sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8&amp;rewriteBatchedStatements=true</sonar.jdbc.url>
-				<sonar.jdbc.username>sonar</sonar.jdbc.username>
-				<sonar.jdbc.password>sonar</sonar.jdbc.password>
-			</properties>
-		</profile>
-	</profiles>
-
-    <!-- The compile/test time target platform -->
-	<repositories>
-		<repository>
-			<id>eclipse-luna</id>
-			<layout>p2</layout>
-			<url>${eclipse-site}</url>
-		</repository>
-		<repository>
-			<id>eclipse-swtbot-2.2.1</id>
-			<layout>p2</layout>
-			<url>${swtbot-site}</url>
-		</repository>
-	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
@@ -106,6 +71,15 @@
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
+					<target>
+						<artifact>
+							<groupId>net.resheim.eclipse.timekeeper</groupId>
+							<artifactId>net.resheim.eclipse.timekeeper-parent</artifactId>
+							<version>1.0.0-SNAPSHOT</version>
+							<classifier>default</classifier>
+						</artifact>
+					</target>
+					<resolver>p2</resolver>
 					<environments>
 						<environment>
 							<os>linux</os>
@@ -113,11 +87,6 @@
 							<arch>x86</arch>
 						</environment>
 						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86</arch>
@@ -125,6 +94,11 @@
 						<environment>
 							<os>win32</os>
 							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
 							<arch>x86_64</arch>
 						</environment>
 						<environment>
@@ -133,7 +107,6 @@
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
-                    <pomDependencies>consider</pomDependencies>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -158,27 +131,6 @@
 						<version>${tycho-extras-version}</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.2.201409121644</version>
-				<executions>
-					<execution>
-						<id>prepare-integration-tests</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<include>net.*</include>
-							<include>org.junit.*</include>
-							<!-- Where to put jacoco coverage report -->
-							<destFile>${sonar.jacoco.reportPath}</destFile>
-							<append>true</append>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
