Fix #24: Deploy artifacts built by Travis-CI to GitHub
Task-Url: http://github.com/turesheim/eclipse-timekeeper/issues/issue/24

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ deploy:
   skip_cleanup: true
   api_key:
     secure: UAKAsUbB0H3sCOkarR0gK2WqATpCxXcIqh5T8H8bGtmOxcAoNyhkdf0m/CnKcEEvn2XW/c5mE28Y4Wb7XV7RmVB/SyQtH+JqyQsDpIKLWUKDACfxbSqCxfSyamioMHqbHITzTzogmGEgFOGFhHgOV0RsZ0uJZQuQ+5BhB3KLnEg=
-  file: ${HOME}/build/${TRAVIS_REPO_SLUG}/net.resheim.eclipse.timekeeper-site/target/site/artifacts.jar
-  file: ${HOME}/build/${TRAVIS_REPO_SLUG}/net.resheim.eclipse.timekeeper-site/target/site/content.jar
-  file: ${HOME}/build/${TRAVIS_REPO_SLUG}/net.resheim.eclipse.timekeeper-site/target/site/features/net.resheim.eclipse.timekeeper_*.jar
+  file: "${HOME}/build/${TRAVIS_REPO_SLUG}/net.resheim.eclipse.timekeeper-site/target/site"
   on:
     repo: turesheim/eclipse-timekeeper
     tags: true
