--- a/net.resheim.eclipse.timekeeper-site/pom.xml
+++ b/net.resheim.eclipse.timekeeper-site/pom.xml
@@ -11,7 +11,19 @@
 	</parent>
 
 	<artifactId>net.resheim.eclipse.timekeeper-site</artifactId>
-	<packaging>eclipse-update-site</packaging>
 	<name>Eclipse Timekeeper p2 Repository</name>
-
+	<packaging>eclipse-repository</packaging>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-repository-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<repositoryName>Eclipse Timekeeper</repositoryName>
+					<finalName>${project.groupId}-${unqualifiedVersion}.${buildQualifier}</finalName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
