--- a/net.resheim.eclipse.timekeeper-feature/feature.properties
+++ b/net.resheim.eclipse.timekeeper-feature/feature.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2014 Torkild U. Resheim
+# Copyright (c) 2014, 2015 Torkild U. Resheim
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -8,8 +8,8 @@
 # Contributors:
 #     Torkild U. Resheim - initial API and implementation
 ###############################################################################
-featureName=Eclipse Timekeeper
-description=A simple extension of Mylyn Tasks that tracks the time a task is active and presents the result in a view. 
+featureName=Timekeeper
+description=An extension of Mylyn Tasks that tracks the time a task is active and presents the result in a view. 
 providerName=Torkild U. Resheim
 copyright=Copyright (c) 2014 Torkild U. Resheim. All rights reserved.
 license=\
