--- a/net.resheim.eclipse.timekeeper.ui/build.properties
+++ b/net.resheim.eclipse.timekeeper.ui/build.properties
@@ -4,4 +4,8 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               contexts.xml
+               contexts.xml,\
+               resheim-32x32.png,\
+               about.ini,\
+               about.properties,\
+               about.mappings
