Fix #10: Handle AFK time
Task-Url: http://github.com/turesheim/eclipse-timekeeper/issues/issue/10

--- a/net.resheim.eclipse.timekeeper-feature/feature.properties
+++ b/net.resheim.eclipse.timekeeper-feature/feature.properties
@@ -8,10 +8,10 @@
 # Contributors:
 #     Torkild U. Resheim - initial API and implementation
 ###############################################################################
-featureName=Timekeeper
+featureName=Eclipse Timekeeper
 description=An extension of Mylyn Tasks that tracks the time a task is active and presents the result in a view. 
 providerName=Torkild U. Resheim
-copyright=Copyright (c) 2014 Torkild U. Resheim. All rights reserved.
+copyright=Copyright (c) 2014-2015 Torkild U. Resheim. All rights reserved.
 license=\
 Eclipse Foundation Software User Agreement\n\
 February 1, 2011\n\
