--- a/net.resheim.eclipse.timekeeper.ui/about.properties
+++ b/net.resheim.eclipse.timekeeper.ui/about.properties
@@ -1,11 +1,11 @@
-featureName=Timekeeper
+featureName=Eclipse Timekeeper
 featureText=Time tracking and reporting extension to Mylyn Tasks\n\
 Version: {featureVersion}\n\
 \n\
-Copyright \u00A9 2014 Torkild U. Resheim.  All rights reserved.\n\
+Copyright \u00A9 2014-2015 Torkild U. Resheim.  All rights reserved.\n\
 \n\
-This extension to Mylyn Tasks provides means to track the time used \
-on a task. This information is presented in a "workweek" view and can \
-be manually edited. Data can be exported for use in other applications.\n\
+Visit https://github.com/turesheim/eclipse-timekeeper\n\
 \n\
-Visit https://github.com/turesheim/eclipse-timekeeper
+This distribution includes JNA (Java Native Access) along with some code \
+developed by JPFF.org, both licensed under the Apache Software License, \
+version 2.0. See https://github.com/twall/jna and http://www.jppf.org respectively.\n\ 
