--- a/net.resheim.eclipse.timekeeper.ui/build.properties
+++ b/net.resheim.eclipse.timekeeper.ui/build.properties
@@ -4,8 +4,10 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               contexts.xml,\
                resheim-32x32.png,\
                about.ini,\
                about.properties,\
-               about.mappings
+               about.mappings,\
+               lib/jna-4.1.0.jar,\
+               lib/jna-platform-4.1.0.jar,\
+               lib/LICENSE.TXT
