Fix #10: Handle AFK time
Task-Url: http://github.com/turesheim/eclipse-timekeeper/issues/issue/10

--- a/net.resheim.eclipse.timekeeper.ui/build.properties
+++ b/net.resheim.eclipse.timekeeper.ui/build.properties
@@ -8,6 +8,4 @@ bin.includes = plugin.xml,\
                about.ini,\
                about.properties,\
                about.mappings,\
-               lib/jna-4.1.0.jar,\
-               lib/jna-platform-4.1.0.jar,\
-               lib/LICENSE.TXT
+               lib/
