--- a/net.resheim.eclipse.timekeeper.ui/build.properties
+++ b/net.resheim.eclipse.timekeeper.ui/build.properties
@@ -9,3 +9,5 @@ bin.includes = plugin.xml,\
                about.properties,\
                about.mappings,\
                lib/
+jars.extra.classpath = lib/jna-4.1.0.jar,\
+                       lib/jna-platform-4.1.0.jar
