Fix #31: Correct EULA text
Task-Url: http://github.com/turesheim/eclipse-timekeeper/issues/issue/31

--- a/net.resheim.eclipse.timekeeper.ui/about.properties
+++ b/net.resheim.eclipse.timekeeper.ui/about.properties
@@ -2,7 +2,7 @@ featureName=Eclipse Timekeeper
 featureText=Time tracking and reporting extension to Mylyn Tasks\n\
 Version: {featureVersion}\n\
 \n\
-Copyright \u00A9 2014-2015 Torkild U. Resheim.  All rights reserved.\n\
+Copyright \u00A9 2014-2015 Torkild U. Resheim, Trondheim, Norway. All rights reserved.\n\
 \n\
 Visit https://github.com/turesheim/eclipse-timekeeper\n\
 \n\
