Fix #51: Add "index.html" to p2 repository root
Task-Url: http://github.com/turesheim/eclipse-timekeeper/issues/issue/51

--- a/net.resheim.eclipse.timekeeper-site/pom.xml
+++ b/net.resheim.eclipse.timekeeper-site/pom.xml
@@ -22,6 +22,14 @@
 				<configuration>
 					<repositoryName>Eclipse Timekeeper</repositoryName>
 					<finalName>${project.groupId}-${unqualifiedVersion}.${buildQualifier}</finalName>
+					<additionalFileSets>
+						<fileSet>
+							<directory>${basedir}/resources</directory>
+							<includes>
+								<include>**/*.html</include>
+							</includes>
+						</fileSet>
+					</additionalFileSets>
 				</configuration>
 			</plugin>
 		</plugins>
