Add logo, change branding.

--- a/net.resheim.eclipse.timekeeper.ui/build.properties
+++ b/net.resheim.eclipse.timekeeper.ui/build.properties
@@ -8,4 +8,5 @@ bin.includes = plugin.xml,\
                about.ini,\
                about.properties,\
                about.mappings,\
-               lib/
+               lib/,\
+               ego-32x32.png
