--- a/net.resheim.eclipse.timekeeper.ui/about.ini
+++ b/net.resheim.eclipse.timekeeper.ui/about.ini
@@ -8,7 +8,7 @@
 aboutText=%featureText
 
 # Property "featureImage" contains path to feature image (32x32)
-featureImage=resheim-32x32.png
+featureImage=ego-32x32.png
 
 # Property "appName" contains name of the application (translated)
 appName=%featureName
