Renamed feature and bundle.

--- a/net.resheim.eclipse.timekeeper-feature/feature.properties
+++ b/net.resheim.eclipse.timekeeper-feature/feature.properties
@@ -8,7 +8,7 @@
 # Contributors:
 #     Torkild U. Resheim - initial API and implementation
 ###############################################################################
-featureName=Eclipse Timekeeper
+featureName=Timekeeper for Eclipse
 description=An extension of Mylyn Tasks that tracks the time a task is active and presents the result in a view. 
 providerName=Torkild U. Resheim
 copyright=Copyright (c) 2014-2015 Torkild U. Resheim, Trondheim, Norway. All rights reserved.
