--- a/net.resheim.eclipse.timekeeper.ui/about.properties
+++ b/net.resheim.eclipse.timekeeper.ui/about.properties
@@ -1,4 +1,4 @@
-featureName=Eclipse Timekeeper
+featureName=Timekeeper for Eclipse
 featureText=Time tracking and reporting extension to Mylyn Tasks\n\
 Version: {featureVersion}\n\
 \n\
