--- a/net.resheim.eclipse.timekeeper-feature/feature.properties
+++ b/net.resheim.eclipse.timekeeper-feature/feature.properties
@@ -15,7 +15,7 @@ copyright=Copyright (c) 2014-2015 Torkild U. Resheim, Trondheim, Norway. All rig
 license=\
 User Agreement\n\
 \n\
-January 30, 2015\n\
+March 30, 2015\n\
 \n\
 Usage Of Content\n\
 \n\
@@ -53,7 +53,7 @@ Download or Module including, but not limited to the following locations:\n\
 \n\
 THE ABOUTS, FEATURE LICENSES, AND FEATURE UPDATE LICENSES REFER TO THE EPL \
 OR OTHER LICENSE AGREEMENTS, NOTICES OR TERMS AND CONDITIONS. THESE \
-OTHER LICENSE AGREEMENTS INCLUDE:\n\
+OTHER LICENSE AGREEMENTS MAY INCLUDE:\n\
 \n\
     - Apache Software License 2.0 (available at http://www.apache.org/licenses/LICENSE-2.0)\n\
 \n\
