Remove *-parent project, it's no longer required.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 sudo: false
-script: mvn clean verify -f net.resheim.eclipse.timekeeper-parent/pom.xml
+script: mvn clean verify
 jdk:
   - oraclejdk8
 cache:
