--- a/pom.xml
+++ b/pom.xml
@@ -132,9 +132,9 @@
 	</build>
 
 	<modules>
-		<module>../net.resheim.eclipse.timekeeper-feature</module>
-		<module>../net.resheim.eclipse.timekeeper.ui</module>
-		<module>../net.resheim.eclipse.timekeeper-site</module>
+		<module>net.resheim.eclipse.timekeeper-feature</module>
+		<module>net.resheim.eclipse.timekeeper.ui</module>
+		<module>net.resheim.eclipse.timekeeper-site</module>
 	</modules>
 
 </project>
