--- a/net.resheim.eclipse.timekeeper-feature/pom.xml
+++ b/net.resheim.eclipse.timekeeper-feature/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<artifactId>net.resheim.eclipse.timekeeper-parent</artifactId>
-		<relativePath>../net.resheim.eclipse.timekeeper-parent/pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 		<groupId>net.resheim.eclipse.timekeeper</groupId>
 		<version>1.0.1-SNAPSHOT</version>
 	</parent>
