Fix #66: Time tracker is always off by one second
Task-Url: http://github.com/turesheim/eclipse-timekeeper/issues/issue/66

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
 		<module>net.resheim.eclipse.timekeeper-feature</module>
 		<module>net.resheim.eclipse.timekeeper.ui</module>
 		<module>net.resheim.eclipse.timekeeper-site</module>
+        <module>net.resheim.eclipse.timekeeper.tests</module>
 	</modules>
 
 </project>
