--- a/net.resheim.eclipse.timekeeper.ui/plugin.xml
+++ b/net.resheim.eclipse.timekeeper.ui/plugin.xml
@@ -51,5 +51,19 @@
          </command>
       </menuContribution>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="net.resheim.eclipse.timekeeper.ui.preferences.TimekeeperPreferences"
+            id="net.resheim.eclipse.timekeeper.ui.preferences.TimekeeperPreferences"
+            name="Timekeeper">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="net.resheim.eclipse.timekeeper.ui.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 
 </plugin>
