--- a/net.resheim.eclipse.timekeeper-feature/pom.xml
+++ b/net.resheim.eclipse.timekeeper-feature/pom.xml
@@ -4,6 +4,9 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 
+	<artifactId>net.resheim.eclipse.timekeeper</artifactId>
+	<packaging>eclipse-feature</packaging>
+
 	<parent>
 		<artifactId>net.resheim.eclipse.timekeeper-parent</artifactId>
 		<relativePath>../pom.xml</relativePath>
@@ -11,8 +14,43 @@
 		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>net.resheim.eclipse.timekeeper</artifactId>
-	<packaging>eclipse-feature</packaging>
-	<version>1.1.0-SNAPSHOT</version>
-
+	<build>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.eclipse.tycho
+										</groupId>
+										<artifactId>
+											tycho-packaging-plugin
+										</artifactId>
+										<versionRange>
+											[0.22.0,)
+										</versionRange>
+										<goals>
+											<goal>
+												build-qualifier-aggregator
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
