Fix #77: Store time tracking data in shared database
* H2 database is stored in the workspace under ".timekeeper/"
* Replace basic tracking with activities (start & stop time)
* Show activities in Workweek view, tooltip for times
* Allow editing of activity start time and range

Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/77

--- a/net.resheim.eclipse.timekeeper.ui/about.properties
+++ b/net.resheim.eclipse.timekeeper.ui/about.properties
@@ -2,10 +2,11 @@ featureName=Timekeeper for Eclipse
 featureText=Time tracking and reporting extension to Mylyn Tasks\n\
 Version: {featureVersion}\n\
 \n\
-Copyright \u00A9 2014-2015 Torkild U. Resheim, Trondheim, Norway. All rights reserved.\n\
+Copyright \u00A9 2014-2017 Torkild U. Resheim, Trondheim, Norway. All rights reserved.\n\
 \n\
 Visit https://github.com/turesheim/eclipse-timekeeper\n\
 \n\
-This distribution includes JNA (Java Native Access) along with some code \
-developed by JPFF.org, both licensed under the Apache Software License, \
-version 2.0. See https://github.com/twall/jna and http://www.jppf.org respectively.\n\ 
+This software contains unmodified binary redistributions of the H2 database engine,\n\
+Copyright \u00A9 2008-2016 the H2 Group and Java Native Access (JNA) along with idle session \n\
+detecting code developed by JPFF.org. See http://www.h2database.com, https://github.com/twall/jna \n\
+and http://www.jppf.org respectively.\n\
