--- a/net.resheim.eclipse.timekeeper.tests/pom.xml
+++ b/net.resheim.eclipse.timekeeper.tests/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<artifactId>net.resheim.eclipse.timekeeper-parent</artifactId>
 		<groupId>net.resheim.eclipse.timekeeper</groupId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>net.resheim.eclipse.timekeeper.tests</artifactId>
@@ -15,7 +15,7 @@
 	<name>Eclipse Timekeeper Integration Tests</name>
 
 	<properties>
-		<uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=10000 -Xmx1024m -XX:MaxPermSize=384m -Dscreenshots=${project.build.directory}/../../images</uitest.vmparams>
+		<uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=10000 -Xmx1024m  -Dscreenshots=${project.build.directory}/../../images</uitest.vmparams>
 	</properties>
 
 	<profiles>
