Fix #93: Remove the notes entity, better to reuse private notes
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/93

--- a/net.resheim.eclipse.timekeeper.db/build.properties
+++ b/net.resheim.eclipse.timekeeper.db/build.properties
@@ -3,4 +3,7 @@ output.. = target/classes/
 src.excludes = src-test/
 bin.includes = META-INF/,\
                .,\
-               lib/h2-1.4.192.jar
+               lib/h2-1.4.192.jar,\
+               lib/flyway-core-4.1.2.jar,\
+               db/
+               lib/flyway-core-4.1.2.jar
