Fix #99: Add reference to Flyway and H2dB in feature blurb
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/99

--- a/net.resheim.eclipse.timekeeper-feature/feature.properties
+++ b/net.resheim.eclipse.timekeeper-feature/feature.properties
@@ -9,9 +9,11 @@
 #     Torkild U. Resheim - initial API and implementation
 ###############################################################################
 featureName=Timekeeper for Eclipse
-description=An extension of Mylyn Tasks that tracks the time a task is active and presents the result in a view. 
+description=An extension of Mylyn Tasks that tracks the time a task is active \
+and presents the result in a view. Notes can be added and the time used can \
+be adjusted. The result can be exported to various formats.
 providerName=Torkild U. Resheim
-copyright=Copyright (c) 2014-2016 Torkild U. Resheim, Trondheim, Norway. All rights reserved.
+copyright=Copyright (c) 2014-2017 Torkild U. Resheim, Trondheim, Norway. All rights reserved.
 license=\
 User Agreement\n\
 \n\
