--- a/net.resheim.eclipse.timekeeper.ui/about.properties
+++ b/net.resheim.eclipse.timekeeper.ui/about.properties
@@ -3,10 +3,8 @@ featureText=Time tracking and reporting extension to Mylyn Tasks\n\
 Version: {featureVersion}\n\
 \n\
 Copyright \u00A9 2014-2017 Torkild U. Resheim, Trondheim, Norway. All rights reserved.\n\
+See https://github.com/turesheim/eclipse-timekeeper for details.\n\
 \n\
-Visit https://github.com/turesheim/eclipse-timekeeper\n\
-\n\
-This software contains unmodified binary redistributions of the H2 database engine,\n\
-Copyright \u00A9 2008-2016 the H2 Group and Java Native Access (JNA) along with idle session \n\
-detecting code developed by JPFF.org. See http://www.h2database.com, https://github.com/twall/jna \n\
-and http://www.jppf.org respectively.\n\
+This software contains unmodified binary redistributions of the H2 database engine, Copyright \u00A9 2008-2016\n\
+the H2 Group; Flyway, Copyright \u00A9 2010-2017 Boxfuse GmbH; and Java Native Access (JNA). See\n\
+http://www.h2database.com, https://flywaydb.org, and https://github.com/twall/jna respectively.
