Fix #85: Add preference for specifying database URL and location
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/85

--- a/net.resheim.eclipse.timekeeper.ui/plugin.xml
+++ b/net.resheim.eclipse.timekeeper.ui/plugin.xml
@@ -100,6 +100,12 @@
             id="net.resheim.eclipse.timekeeper.ui.preferences.TimekeeperPreferences"
             name="Timekeeper">
       </page>
+      <page
+            category="net.resheim.eclipse.timekeeper.ui.preferences.TimekeeperPreferences"
+            class="net.resheim.eclipse.timekeeper.ui.preferences.DatabasePreferences"
+            id="net.resheim.eclipse.timekeeper.ui.preferences.DatabasePreferences"
+            name="Database">
+      </page>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
