--- a/net.resheim.eclipse.timekeeper.db/build.properties
+++ b/net.resheim.eclipse.timekeeper.db/build.properties
@@ -5,5 +5,6 @@ bin.includes = META-INF/,\
                .,\
                lib/h2-1.4.192.jar,\
                lib/flyway-core-4.1.2.jar,\
-               db/
-               lib/flyway-core-4.1.2.jar
+               db/,\
+               plugin.xml,\
+               lib/FLYWAY_LICENSE.TXT
