--- a/net.resheim.eclipse.timekeeper.ui/pom.xml
+++ b/net.resheim.eclipse.timekeeper.ui/pom.xml
@@ -12,6 +12,8 @@
 	</parent>
 
 	<artifactId>net.resheim.eclipse.timekeeper.ui</artifactId>
+	<groupId>net.resheim.eclipse.timekeeper</groupId>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 
 	<properties>
