--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 	<properties>
 		<tycho.version>0.26.0</tycho.version>
 		<tycho.scmUrl>scm:git:git://github.com/turesheim/eclipse-timekeeper.git</tycho.scmUrl>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<organization>
