Fix #110: Database cannot always be reached after a restart
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/110

--- a/net.resheim.eclipse.timekeeper.db/build.properties
+++ b/net.resheim.eclipse.timekeeper.db/build.properties
@@ -3,8 +3,8 @@ output.. = target/classes/
 src.excludes = src-test/
 bin.includes = META-INF/,\
                .,\
-               lib/h2-1.4.192.jar,\
                lib/flyway-core-4.1.2.jar,\
                db/,\
                plugin.xml,\
-               lib/FLYWAY_LICENSE.TXT
+               lib/FLYWAY_LICENSE.TXT,\
+               lib/h2-1.4.194.jar
