--- a/net.resheim.eclipse.timekeeper.db/.classpath
+++ b/net.resheim.eclipse.timekeeper.db/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/flyway-core-5.0.7.jar" sourcepath="/Users/torkild/Development/Libraries/flyway-core-5.0.7-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.27.jar" sourcepath="/Users/torkild/Development/Libraries/apache-freemarker-2.3.27-incubating-src/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -7,7 +9,19 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.4.194.jar"/>
-	<classpathentry kind="lib" path="lib/flyway-core-4.1.2.jar" sourcepath="lib/flyway-core-4.1.2-sources.jar"/>
-	<classpathentry kind="src" path="src/"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src-test">
+		<attributes>
+			<attribute name="test" value="true"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
