--- a/net.resheim.eclipse.timekeeper.db/build.properties
+++ b/net.resheim.eclipse.timekeeper.db/build.properties
@@ -3,8 +3,7 @@ output.. = target/classes/
 src.excludes = src-test/
 bin.includes = META-INF/,\
                .,\
-               lib/flyway-core-4.1.2.jar,\
                db/,\
                plugin.xml,\
-               lib/FLYWAY_LICENSE.TXT,\
-               lib/h2-1.4.194.jar
+               lib/,\
+               templates/
