--- a/net.resheim.eclipse.timekeeper.ui/about.properties
+++ b/net.resheim.eclipse.timekeeper.ui/about.properties
@@ -5,6 +5,7 @@ Version: {featureVersion}\n\
 Copyright \u00A9 2014-2017 Torkild U. Resheim, Trondheim, Norway. All rights reserved.\n\
 See https://github.com/turesheim/eclipse-timekeeper for details.\n\
 \n\
-This software contains unmodified binary redistributions of the H2 database engine, Copyright \u00A9 2008-2016\n\
-the H2 Group; Flyway, Copyright \u00A9 2010-2017 Boxfuse GmbH; and Java Native Access (JNA). See\n\
-http://www.h2database.com, https://flywaydb.org, and https://github.com/twall/jna respectively.
+This software contains unmodified binary redistributions of the H2 database engine \u00A9 2008-2016\n\
+the H2 Group; Flyway \u00A9 2010-2017 Boxfuse GmbH; Apache FreeMarker \u00A9 2015-2017 The Apache Software Foundation\n\
+and Java Native Access (JNA) \u00A9 1998-2017 JNA Contributors.\n\
+See http://www.h2database.com, https://flywaydb.org, http://freemarker.org, and https://github.com/twall/jna respectively.
