Fix #97: Copy week to clipboard should be using a user configurable template
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/97

--- a/net.resheim.eclipse.timekeeper.ui/plugin.xml
+++ b/net.resheim.eclipse.timekeeper.ui/plugin.xml
@@ -49,7 +49,7 @@
             name="CSV Export">
       </command>
       <command
-            defaultHandler="net.resheim.eclipse.timekeeper.ui.commands.HTMLToClipboardHandler"
+            defaultHandler="net.resheim.eclipse.timekeeper.ui.commands.DefaultTemplateToClipboardHandler"
             id="net.resheim.eclipse.timekeeper.ui.HTMLClipboard"
             name="HTML to Clipboard">
       </command>
