--- a/net.resheim.eclipse.timekeeper.ui/build.properties
+++ b/net.resheim.eclipse.timekeeper.ui/build.properties
@@ -8,5 +8,4 @@ bin.includes = plugin.xml,\
                about.properties,\
                about.mappings,\
                lib/,\
-               ego-32x32.png,\
-               templates/
+               ego-32x32.png
