--- a/net.resheim.eclipse.timekeeper.ui/build.properties
+++ b/net.resheim.eclipse.timekeeper.ui/build.properties
@@ -8,4 +8,5 @@ bin.includes = plugin.xml,\
                about.properties,\
                about.mappings,\
                lib/,\
-               ego-32x32.png
+               torkild-etched.png,\
+               torkild-etched@2x.png,\
