--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ cache:
 deploy:
   provider: releases
   skip_cleanup: true
-  api_key:
-    secure: UAKAsUbB0H3sCOkarR0gK2WqATpCxXcIqh5T8H8bGtmOxcAoNyhkdf0m/CnKcEEvn2XW/c5mE28Y4Wb7XV7RmVB/SyQtH+JqyQsDpIKLWUKDACfxbSqCxfSyamioMHqbHITzTzogmGEgFOGFhHgOV0RsZ0uJZQuQ+5BhB3KLnEg=
   file_glob: true
   file: ${HOME}/build/${TRAVIS_REPO_SLUG}/net.resheim.eclipse.timekeeper-site/target/net.resheim.eclipse.timekeeper-*.zip
+  api_key:
+    secure:  TrtpdW5MvmiovgwbyXM4I9Dqm4ZLgSi8PQGaPVeaXNbJdiK//F7TB3fPmBhaQWQB/irEGNCvZhBZIEsp8YMRy0d5Trmq3uRHy90Hu278colkb5lzyQeeRVAXcmrJFYlfATM4y90+qrp9+8Wlw62UA4NPcaYybzLJYo4Xb30x2hQ=
+  overwrite: true
   on:
     repo: turesheim/eclipse-timekeeper
     tags: true
