Update target platform

--- a/net.resheim.eclipse.timekeeper.ui/.classpath
+++ b/net.resheim.eclipse.timekeeper.ui/.classpath
@@ -7,6 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src-test"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-4.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
