Fix Sonar links to CI and SCM

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,11 +7,12 @@ sonar.projectVersion=2.0.0-SNAPSHOT
 # =====================================================
 
 sonar.links.homepage=https://github.com/turesheim/eclipse-timekeeper
-sonar.links.ci=https://github.com/turesheim/eclipse-timekeeper
-sonar.links.scm=https://github.com/turesheim/eclipse-timekeeper
+sonar.links.ci=https://travis-ci.org/turesheim/eclipse-timekeeper
+sonar.links.scm=https://github.com/turesheim/eclipse-timekeeper.git
 sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 
-sonar.sources=src # we simply need this to stop the whining
+# we simply need this to stop the whining
+sonar.sources=src 
 sonar.java.coveragePlugin=jacoco
 
 # java version used by source files:
