Exclude coverage test on the UI plugin

--- a/net.resheim.eclipse.timekeeper.ui/pom.xml
+++ b/net.resheim.eclipse.timekeeper.ui/pom.xml
@@ -13,6 +13,11 @@
 
 	<artifactId>net.resheim.eclipse.timekeeper.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	
+	<properties>
+		<!-- We currently have no UI tests and no plans to add any -->
+		<sonar.coverage.exclusions>**/*.java</sonar.coverage.exclusions>
+	</properties>
 
     <dependencies>
         <dependency>
