--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,11 +18,17 @@ sonar.java.coveragePlugin=jacoco
 # java version used by source files:
 sonar.java.source=8
 
-sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui
-net.resheim.eclipse.timekeeper.db.sonar.projectName=Timekeeper database
+sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui,net.resheim.eclipse.timekeeper.test
+# Database plugin
+net.resheim.eclipse.timekeeper.db.sonar.projectName=Timekeeper Database
 net.resheim.eclipse.timekeeper.db.sonar.sources=src
 net.resheim.eclipse.timekeeper.db.sonar.tests=src-test
 net.resheim.eclipse.timekeeper.db.sonar.java.binaries=target/classes
-net.resheim.eclipse.timekeeper.ui.sonar.projectName=Timekeeper
+# User interface plugin
+net.resheim.eclipse.timekeeper.ui.sonar.projectName=Timekeeper User Interface
 net.resheim.eclipse.timekeeper.ui.sonar.sources=src
 net.resheim.eclipse.timekeeper.ui.sonar.java.binaries=target/classes
+# Integration tests
+net.resheim.eclipse.timekeeper.test.sonar.projectName=Timekeeper Integration Tests
+net.resheim.eclipse.timekeeper.test.sonar.sources=src
+net.resheim.eclipse.timekeeper.test.sonar.java.binaries=target/classes
